fix bug where results column is too narrow if no search results

--- a/food_search/static/css/search.css
+++ b/food_search/static/css/search.css
@@ -8,5 +8,5 @@
 }
 
 input[type="text"] {
-    border: none
+    border: none;
 }
